--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "canvas": "^3.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.6.1",
-    "socket.io": "^4.7.2",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.1",
     "path": "^0.12.7",
-    "express-fileupload": "^1.4.0"
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
