--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,6 +2,7 @@
   "name": "ChatApp",
   "short_name": "Chat",
   "description": "Real-time chat application",
+  "version": "1.1.0",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
